# func-auditlog-save

./: .gitignore  README.md  config.py  function_app.py  main.py  pyproject.toml  requirements.txt
infrastructure/: blob_client.py  graph_client.py
