[project]
name = "func-auditlog-save"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-functions>=2.1.0",
    "azure-functions-durable>=1.5.0",
    "azure-storage-blob>=12.28.0",
    "msal>=1.36.0",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
